Files updated, responsiveness added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<li><a href="#services">Service</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#team">Team</a></li>
-					<li><a href="#blog">Blog</a></li>
+					<li><a href="blog/blog.html">Blog</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -40,12 +40,12 @@
 				<a href="#">Learn More</a>
 			</div>
 			<div class="banner-text-box">
-				<h1>222This is a main heading</h1>
+				<h1>This is a main heading</h1>
 				<h2>Lorem Ipsum is simply dummy text of the printing</h2>
 				<a href="#">Learn More</a>
 			</div>
 			<div class="banner-text-box">
-				<h1>333This is a main heading</h1>
+				<h1>This is a main heading</h1>
 				<h2>Lorem Ipsum is simply dummy text of the printing</h2>
 				<a href="#">Learn More</a>
 			</div>
@@ -58,7 +58,7 @@
 
 		<!-- Services -->
 
-<div class="services">
+<div id="services">
 	<div class="services-inner">
 		<div class="services-body">
 			<div class="services-box">
@@ -87,7 +87,7 @@
 
 		<!--Portfolio-->
 
-<section class="portfolio" style="background-color: #f1f1f1;">
+<section id="portfolio" style="background-color: #f1f1f1;">
 	<div class="portfolio-inner">
 		<div class="portfolio-body">
 			<h2>Portfolio</h2>
@@ -114,7 +114,7 @@
 
 		<!--Team-->
 
-<section class="team">
+<section id="team">
 	<div class="team-inner">
 		<div class="team-body">
 			<h2>The Team</h2>
@@ -219,12 +219,12 @@
 			<h3>John Dove</h3>
 			</div>
 			<div class="clients-text-box">
-			<h2>222What Clients Say</h2>
+			<h2>What Clients Say</h2>
 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 500s, when an unknown printer took a galley of type.</p>
 			<h3>John Dove</h3>
 			</div>
 			<div class="clients-text-box">
-			<h2>333What Clients Say</h2>
+			<h2>What Clients Say</h2>
 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 500s, when an unknown printer took a galley of type.</p>
 			<h3>John Dove</h3>
 			</div>
@@ -236,7 +236,7 @@
 
 		<!--Contact us-->
 
-<section class="contact" style="background-image:url(images/contact.jpg); ">
+<section id="contact" style="background-image:url(images/contact.jpg); ">
 	<div class="contact-inner">
 		<div class="contact-body">
 			<h2>Contact Us</h2>
