--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 				    <li>Proin commodo turpis</li>
 				    <li>Lacus pulvinarvel</li>
 				    <li>Prnare nisi pretium</li>
-				    <li class="prices-button"><a href="#">Buy now</a></li>
+				    <li class="prices-button"><a href="#contact">Buy now</a></li>
 				</ul>
 			</div>
 			<div class="column">
@@ -188,7 +188,7 @@
 				    <li>Proin commodo turpis</li>
 				    <li>Lacus pulvinarvel</li>
 				    <li>Prnare nisi pretium</li>
-				    <li class="prices-button"><a href="#">Buy now</a></li>
+				    <li class="prices-button"><a href="#contact">Buy now</a></li>
 				</ul>
 			</div>
 			<div class="column">
@@ -201,7 +201,7 @@
 				    <li>Proin commodo turpis</li>
 				    <li>Lacus pulvinarvel</li>
 				    <li>Prnare nisi pretium</li>
-				    <li class="prices-button"><a href="#">Buy now</a></li>
+				    <li class="prices-button"><a href="#contact">Buy now</a></li>
 				</ul>
 			</div>
 		</div>
